<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Syncthing-Fork</string>
    <string name="app_description">An open, trustworthy and decentralized file synchronization application.</string>
    <string name="welcome_title">Welcome to Syncthing for Android</string>
    <string name="introduction">Introduction</string>
    <string name="welcome_text">Syncthing is an open-source file synchronization application. To share data with other devices, you need to add their unique device IDs to the device list. Afterwards you can select which folders to share with which devices.\n\
Please report any problems you encounter via Github.</string>
    <string name="storage_permission_title">Storage Permission</string>
    <string name="storage_permission_desc">Syncthing needs to access your storage to do file synchronization.</string>
    <string name="ignore_doze_permission_title">Battery Optimization</string>
    <string name="ignore_doze_permission_os_notice">Android TV\'s are known to occasionally end the app when it\'s running in the background. A solution is available on the wiki at \'%1$s/%2$s\'.</string>
    <string name="ignore_doze_permission_desc">Android may stop synchronization after some time. To prevent this, turn off battery optimization. Some devices have additional task-killing apps preinstalled. You should add Syncthing to their whitelist, as well.</string>
    <string name="toast_ignore_doze_permission_required">This app only works reliably if it is exempted from \"doze\" power save mode.</string>
    <string name="dialog_disable_battery_optimizations_not_supported">Your device does not support disabling battery optimizations</string>
    <string name="location_permission_title">Location Permission</string>
    <string name="location_permission_desc">Syncthing can be configured to work on selected Wi-Fi networks. Android requires the app to have location permission to read the active Wi-Fi network name. If you want to use this feature, press the button above. You may skip this step. See our privacy policy for more details.</string>
    <string name="key_generation_title">Key Generation</string>
    <string name="key_generation_success">Secure keys for private data exchange have been successfully generated.</string>
    <string name="back">Back</string>
    <string name="cont">Continue</string>
    <string name="finish">Finish</string>
    <string name="generic_example">Example</string>
    <string name="generic_error">Error</string>
    <string name="generic_help">Help</string>
    <string name="grant_permission">Grant permission</string>
    <string name="permission_granted">Permission granted</string>
    <string name="reason">Reason:</string>
    <string name="accept">Accept</string>
    <string name="ignore">Ignore</string>
    <string name="page_x_of_y">Page %1$s of %2$s</string>
    <string name="main_menu">Main Menu</string>
    <string name="refresh">Refresh</string>
    <string name="open_main_menu">Open Main Menu</string>
    <string name="close_main_menu">Close Main Menu</string>
    <string name="exception_known_bug_notice">A known bug that has not been solved yet has been encountered. See %1$s/%2$s for more information. Please leave us a precise description of what happened beforehand.</string>
    <string name="dialog_exit_while_running_as_service_title">Confirm to quit app</string>
    <string name="dialog_exit_while_running_as_service_message">For your consideration: You configured the app to start automatically on boot. Therefore it monitors run conditions and syncs at any time in the background when conditions match. You should only quit manually if you run into severe problems. Otherwise, disable \'Start automatically on boot \' in the settings. Would you like to quit now until the device rebooted?</string>
    <string name="add_folder">Add Folder</string>
    <string name="share_device_id">Share Device ID</string>
    <string name="send_device_id_to">Send Device ID to</string>
    <string name="usage_reporting_dialog_title">Allow Anonymous Usage Reporting?</string>
    <string name="usage_reporting_dialog_description">The encrypted usage report is sent daily. It is used to track common platforms, folder sizes and app versions. If the reported data set is changed you will be prompted with this dialog again.\n\nThe aggregated statistics are publicly available at https://data.syncthing.net.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="open_website">Open Website</string>
    <string name="syncthing_usage_stats_url" translatable="false">https://data.syncthing.net</string>
    <string name="toast_write_storage_permission_required">Write storage permission is required for this app</string>
    <string name="device_rejected">Device \"%1$s\" wants to connect</string>
    <string name="folder_rejected">Device \"%1$s\" wants to share folder \"%2$s\"</string>
    <string name="web_gui_creating_key">Generating secure keys. This may take a few minutes&#8230;</string>
    <string name="folders_fragment_title">Folders</string>
    <string name="folder_list_empty">No folders found</string>
    <plurals name="files">
        <item quantity="one">%1$d / %2$d File</item>
        <item quantity="other">%1$d / %2$d Files</item>
    </plurals>
    <string name="override_changes">Override changes</string>
    <string name="override_changes_question">This will undo all changes made on the other devices sharing this folder. Proceed?</string>
    <string name="revert_local_changes">Revert local changes</string>
    <string name="revert_local_changes_question">This will undo all changes made on this device within that folder. Proceed?</string>
    <string name="open_file_manager">Open file manager</string>
    <string name="open_file_with">Open file with</string>
    <string name="open_file_no_compatible_app">No app found to open the file.</string>
    <string name="suggest_file_manager_app_dialog_title">No compatible file manager app found</string>
    <string name="suggest_file_manager_app_dialog_text">We recommend you to install the open-source file manager app \'Simple File Manager\' from F-Droid. Would you like to open its app store page?</string>
    <string name="devices_fragment_title">Devices</string>
    <string name="devices_list_empty">No devices configured. Tap to add a new device.</string>
    <string name="no_devices_configured">No devices configured.\nBegin by adding a device now.</string>
    <string name="device_up_to_date">Up to Date</string>
    <string name="device_syncing">Syncing (%1$d%%)</string>
    <string name="device_disconnected">Disconnected</string>
    <string name="device_paused">Paused</string>
    <string name="device_state_unknown">Unknown</string>
    <string name="download_title">Download</string>
    <string name="upload_title">Upload</string>
    <string name="status_fragment_title">Status</string>
    <string name="button_follow_run_conditions">FOLLOW RUN CONDITIONS</string>
    <string name="button_force_start">FORCE START\nIGNORE RUN CONDITIONS</string>
    <string name="button_force_stop">FORCE STOP\nIGNORE RUN CONDITIONS</string>
    <string name="syncthing_starting">Syncthing is starting.</string>
    <string name="syncthing_running">Syncthing is running.</string>
    <string name="syncthing_not_running">Syncthing is not running.</string>
    <string name="syncthing_has_crashed">Syncthing has crashed.</string>
    <string name="download_title_colon">Download:\u0020</string>
    <string name="upload_title_colon">Upload:\u0020</string>
    <string name="cpu_usage">CPU Usage</string>
    <string name="ram_usage">RAM Usage</string>
    <string name="announce_server">Configured Announce Server</string>
    <string name="uptime">Uptime</string>
    <string name="restart">Restart</string>
    <string name="dialog_confirm_restart">Do you want to restart Syncthing?</string>
    <string name="folder_id">Folder ID</string>
    <string name="folder_label">Folder Label</string>
    <string name="directory">Directory</string>
    <string name="folder_fileWatcher">Watch for changes</string>
    <string name="folder_fileWatcherDescription">Asks operating system to notify about changes to files. If disabled falls back to periodic hourly scans.</string>
    <string name="folder_ignore_delete_caption">Ignore Delete</string>
    <string name="folder_ignore_delete_description">Expert option that affects the handling of incoming index updates. When set, incoming updates with the delete flag set are ignored. See &folder_ignore_delete_docs_url;</string>
    <string name="folder_pause">Pause Folder</string>
    <string name="devices">Devices</string>
    <string name="keep_versions">Keep Versions</string>
    <string name="delete_folder">Delete Folder</string>
    <string name="create_folder">Create Folder</string>
    <string name="edit_folder">Edit Folder</string>
    <string name="create">Create</string>
    <string name="remove_folder_confirm">Do you really want to remove this folder from Syncthing?</string>
    <string name="folder_id_required">The folder ID must not be empty</string>
    <string name="folder_label_required">The folder label must not be empty</string>
    <string name="folder_path_required">The folder path must not be empty</string>
    <string name="dialog_discard_changes">Discard your changes?</string>
    <string name="folder_path_readonly">Your Android version only grants Syncthing readonly access to the selected folder.</string>
    <string name="folder_path_readwrite">Your Android version grants Syncthing read and write access to the selected folder.</string>
    <string name="toast_invalid_folder_selected">Sorry. The selected folder cannot be used. Please select a folder located on the internal or external storage.</string>
    <string name="ignore_patterns">Ignore Patterns</string>
    <string name="device_id">Device ID</string>
    <string name="tips_and_tricks_title">Tips &amp; Tricks</string>
    <string name="recent_changes_title">Recent changes</string>
    <string name="web_gui_title">Web GUI</string>
    <string name="settings_title">Settings</string>
    <string name="category_backup">Import and Export</string>
    <string name="syncthing_version_title">Syncthing Version</string>
    <string name="exit">Exit</string>
    <string name="maximum_age">Maximum Age</string>
    <string name="clean_out_after">Clean out after</string>
    <string name="versions_path">Versions Path</string>
    <string name="keep_versions_description">The number of old versions to keep, per file.</string>
    <string name="simple_file_versioning_description">Files are moved to date stamped versions in a .stversions directory when replaced or deleted by Syncthing.</string>
    <string name="trashcan_versioning_description">Files are moved to .stversions directory when replaced or deleted by Syncthing.</string>
    <string name="staggered_versioning_description">Files are moved to date stamped versions in a .stversions directory when replaced or deleted by Syncthing. Versions are automatically deleted if they are older than the maximum age or exceed the number of files allowed in an interval.\n\nThe following intervals are used: for the first hour a version is kept every 30 seconds, for the first day a version is kept every hour, for the first 30 days a version is kept every day, until the maximum age a version is kept every week.</string>
    <string name="maximum_age_description">The maximum time to keep a version (in days, set to 0 to keep versions forever).</string>
    <string name="versions_path_description">Path where versions should be stored (leave empty for the default .stversions directory in the shared folder).</string>
    <string name="cleanout_after_description">The number of days to keep files in the trash can. Zero means forever</string>
    <string name="show_device_id">Show device ID</string>
</resources>