<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/staggered_versioning_description"
            android:layout_margin="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maximum_age"
            android:textAlignment="center"
            android:textColor="?attr/colorControlNormal"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:layout_marginBottom="0dp" />

        <fragment
            android:id="@+id/fragment"
            android:name="com.nutomic.syncthingandroid.fragments.NumberPickerFragment"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:tag="numberpicker_staggered_versioning"
            tools:layout="@layout/numberpicker_fragment" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maximum_age_description"
            android:layout_margin="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/versions_path"
            android:textAlignment="center"
            android:textColor="?attr/colorControlNormal"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/directoryTextView"
            style="@style/Widget.Syncthing.TextView.Label.Details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_folder_black_24dp"
            android:drawableStart="@drawable/ic_folder_black_24dp"
            android:focusable="true"
            android:hint="@string/directory"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/versions_path_description" />

</LinearLayout>
