<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simple_file_versioning_description"
            android:layout_margin="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/keep_versions"
            android:textAlignment="center"
            android:textColor="?attr/colorControlNormal"
            android:textSize="18sp"
            android:textStyle="bold" />

        <fragment
            android:id="@+id/fragment"
            android:name="com.nutomic.syncthingandroid.fragments.NumberPickerFragment"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:tag="numberpicker_simple_versioning"
            tools:layout="@layout/numberpicker_fragment" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keep_versions_description"
            android:layout_margin="10dp" />

    </LinearLayout>
</ScrollView>
