<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingBottom="@dimen/dots_full_height">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:gravity="center"
            android:text="@string/welcome_title"
            android:textSize="30sp" />

        <ImageView
            android:layout_width="@dimen/img_width_height"
            android:layout_height="@dimen/img_width_height"
            android:contentDescription="@null"
            android:src="@drawable/ic_location" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:id="@+id/btnGrantLocationPerm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/grant_permission"
            android:drawableStart="@android:drawable/ic_menu_mylocation"
            android:paddingStart="40dp"
            android:paddingLeft="40dp"
            android:paddingEnd="40dp"
            android:paddingRight="40dp"
            android:text="@string/grant_permission"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/location_permission_title"
            android:textAlignment="center"
            android:textSize="@dimen/slide_title"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/desc_marginTop"
            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="@dimen/desc_padding"
            android:paddingBottom="@dimen/desc_paddingBottom"
            android:text="@string/location_permission_desc"
            android:textAlignment="center"
            android:textSize="@dimen/slide_desc" />

    </LinearLayout>

</ScrollView>
