<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen2">

    <LinearLayout
        android:background="@color/bg_screen2"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_title"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:layout_margin="30dp" />

        <ImageView
            android:layout_width="@dimen/img_width_height"
            android:layout_height="@dimen/img_width_height"
            android:contentDescription="@null"
            android:src="@drawable/ic_storage" />

        <Button
            android:id="@+id/btnGrantStoragePerm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingEnd="40dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingStart="40dp"
            android:text="@string/grant_permission"
            android:contentDescription="@string/grant_permission"
            android:drawableLeft="@android:drawable/ic_menu_save"
            android:drawableStart="@android:drawable/ic_menu_save"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/storage_permission_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/slide_title"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/desc_marginTop"
                android:paddingLeft="@dimen/desc_padding"
                android:paddingRight="@dimen/desc_padding"
                android:paddingBottom="@dimen/desc_paddingBottom"
                android:text="@string/storage_permission_desc"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:textSize="@dimen/slide_desc" />

        </ScrollView>

    </LinearLayout>


</RelativeLayout>
